@@ -1,5 +1,6 @@
-export("GPFoblq")
-export("GPForth")
+export(
+   "GPFoblq",
+   "GPForth")
 
 export("Random.Start")
 
@@ -26,7 +27,9 @@ export("infomaxT")
 export("infomaxQ")
 export("mccammon")
 
-export("eiv")
+export(
+    "eiv",
+    "cholesky")
 
 S3method("print", "GPArotation")
 S3method("summary", "GPArotation")
